--- a/job-execution-service/src/main/resources/application.properties
+++ b/job-execution-service/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=job-execution-service
+# ----------------------------------------
+# Server Configuration
+# ----------------------------------------
+server.port=5000
+server.servlet.context-path=/api
+# ----------------------------------------
+# H2 Database Setup
+# ----------------------------------------
+spring.datasource.url=jdbc:h2:mem:spring-job-schedule
+#DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+# ----------------------------------------
+# JPA / Hibernate
+# ----------------------------------------
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+# ----------------------------------------
+# H2 Console (optional but useful for base template)
+# ----------------------------------------
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
